--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/comp426-2023-spring/a02-functions-Scott-Hoover.git"
+    "url": "git+https://github.com/comp426-2023-spring/a02-functions-Scott-Hoover"
   },
   "type": "module",
   "author": "Scott-Hoover",
